tried to fix with gap property

--- a/src/styles/blocks/catalog-page.scss
+++ b/src/styles/blocks/catalog-page.scss
@@ -4,7 +4,7 @@
   font-size: $font-size-default;
   line-height: 18px;
 
-  .catalog-page__main {
+  &__main {
     padding: 50px 0;
   }
 
@@ -13,6 +13,7 @@
     margin: auto;
     display: flex;
     justify-content: center;
+    gap: 48px;
 
     &:not(:last-child) {
       margin-bottom: 46px;
