--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -8,4 +8,8 @@
   &__link {
     display: flex;
   }
+
+  &__nav {
+    height: 60px;
+  }
 }
