--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,6 +1,4 @@
 .nav {
-  height: 60px;
-
   &__list {
     height: 100%;
     display: flex;
@@ -27,20 +25,5 @@
     &:hover {
       color: $color-main;
     }
-  }
-}
-
-.is-active {
-  color: $color-main;
-  position: relative;
-
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    background: $color-main;
-    border-radius: 8px;
   }
 }
