--- a/src/styles/blocks/productCard.scss
+++ b/src/styles/blocks/productCard.scss
@@ -3,7 +3,6 @@
   padding: 32px 16px 16px;
   border: 1px solid #f3f3f3;
   border-radius: 5px;
-  margin-right: 48px;
 
   &:nth-child(4n) {
     margin-right: 0;
